--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,11 @@
 {% block content %}
 <!-- ======= Hero Section ======= -->
 <section id="hero">
-  <video id="video-bgvid" width="100%" muted autoplay loop>
-    <source src="{% static 'img/main-bg.mp4' %}" type="video/mp4">
+  <video id="bgvid" muted autoplay loop>
+    <source src="{% static 'img/hero-bg.mp4' %}" type="video/mp4">
     Sorry, your browser does not support HTML5 video.
   </video>
+  <!-- <div id="filter-box"></div> -->
 </section>
 <!-- End Hero -->
 
