--- a/templates/user/signin.html
+++ b/templates/user/signin.html
@@ -2,30 +2,42 @@
 {% load static %}
 {% block content %}
 
+
+{% if request.session.email is not None %}
+<div class="container">
+  <h2 class="text-center">잘못된 접근 : 이미 로그인 하였습니다</h2>
+</div>
+{%else%}
+
 <section id="signin">
   <div class="container-login100">
     <!-- <div class="wrap-login100 m-t-30 p-l-55 p-r-55 p-t-55 p-b-54"> -->
     <div class="wrap-login100 m-t-30 p-l-55 p-r-55">
-      <form class="login100-form validate-form">
+      <form method="post" action="/signin" class="login100-form validate-form">
+        {% csrf_token %}
         <span class="login100-form-title">
           로그인
         </span>
 
         <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
-          <!-- <span class="label-input100">아이디</span> -->
-          <input class="input100" type="text" name="username" placeholder="아이디">
+          <input class="input100" type="text" id="email" name="email" placeholder="이메일">
           <span class="focus-input100" data-symbol="&#xf206;"></span>
         </div>
 
         <div class="wrap-input100 validate-input" data-validate="Password is required">
-          <!-- <span class="label-input100">비밀번호</span> -->
-          <input class="input100" type="password" name="pass" placeholder="비밀번호">
+          <input class="input100" type="password" id="password" name="password" placeholder="비밀번호">
           <span class="focus-input100" data-symbol="&#xf190;"></span>
         </div>
 
-        <div class="text-right p-t-8 p-b-31">
+        <div class="text-right p-t-8 p-b-15">
           <a href="#">
-            자동 로그인, 아이디 찾기, 비밀번호 찾기
+            자동 로그인
+          </a>
+          <a href="#">
+            아이디 찾기
+          </a>
+          <a href="#">
+            비밀번호 찾기
           </a>
         </div>
 
@@ -55,15 +67,15 @@
         <div class="flex-col-c p-t-5">
           <span class="txt1">
             아직 회원이 아니신가요?
+            <a href="/signup">
+              <span class="txt2">회원가입</span>
+            </a>
           </span>
-          <a href="/signup">
-            <span class="txt2">회원가입</span>
-          </a>
         </div>
       </form>
     </div>
   </div>
 </section>
-
+{%endif%}
 
 {% endblock %}
