--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <source src="{% static 'img/main-bg.mp4' %}" type="video/mp4">
     Sorry, your browser does not support HTML5 video.
   </video>
+  <a href="/withfit"><div id="coin"></div></a>
 </section>
 <!-- End Hero -->
 
