--- a/static/css/style.css
+++ b/static/css/style.css
@@ -296,7 +296,6 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-<<<<<<< HEAD
   /* width: 100%; */
   /* height: 100vh; */
   padding: 0;
@@ -308,22 +307,12 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   /* height: 100vh; */
   /* height: 100vh;
-=======
-  /* width: 100%;
-  height: 100vh;
-  padding: 0;
-  background: url("../img/hero-bg.gif") top center;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
   background-size: cover;
   position: relative; */
 }
 #hero:before {
   content: "";
-<<<<<<< HEAD
   /* background: rgba(0, 0, 0, 0.6); */
-=======
-  background: rgba(0, 0, 0, 0.1);
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
   position: absolute;
   bottom: 0;
   top: 0;
@@ -430,6 +419,18 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#coin {
+  background-color: rgba(0, 0, 0, 0);
+  width: 30%;
+  height: 5%;
+  z-index: 1;
+  position: absolute;
+  left: 50%;
+  margin-top: -15%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
@@ -447,17 +448,10 @@ section {
   padding-bottom: 30px;
 }
 .section-title h2 {
-<<<<<<< HEAD
   font-size: 20px;
   letter-spacing: 1px;
   font-weight: 700;
   padding: 8px 20px;
-=======
-  font-size: 28px;
-  letter-spacing: 1px;
-  font-weight: 700;
-  padding: 14px 30px;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
   line-height: 1;
   margin: 0;
   background: #c833ff;
@@ -1761,24 +1755,11 @@ section {
 /*--------------------------------------------------------------
 # Signup
 --------------------------------------------------------------*/
-<<<<<<< HEAD
-
-=======
-#signup {
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-  /* background: url("../img/hero-bg.png") top center; */
-  /* background-size: cover; */
-  position: relative;
-}
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
 
 /*--------------------------------------------------------------
 # Signin
 --------------------------------------------------------------*/
 #signin {
-<<<<<<< HEAD
   /* width: 70%;
   height: 600px;
   margin: 10vh auto;
@@ -1786,14 +1767,6 @@ section {
   background: url("../img/main-bg.gif") top center;
   background-size: cover;
   /* position: relative; */
-=======
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-  /* background: url("../img/sub-bg.png") top center; */
-  /* background-size: cover; */
-  position: relative;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
 }
 #signin {
   height: 100%;
@@ -1897,11 +1870,7 @@ iframe {
 
 .txt2 {
   font-family: Poppins-Regular;
-<<<<<<< HEAD
   font-size: 14px;
-=======
-  font-size: 18px;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
   line-height: 1.5;
   color: #333333;
   text-transform: uppercase;
@@ -1931,22 +1900,14 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-<<<<<<< HEAD
   padding: 15px;
-=======
-  padding: 0;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .wrap-login100 {
-<<<<<<< HEAD
   width: 500px;
-=======
-  width: 400px;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -2031,11 +1992,7 @@ iframe {
   bottom: 0;
   left: 0;
   padding-left: 13px;
-<<<<<<< HEAD
   padding-top: 3px;
-=======
-  padding-bottom: 20px;
->>>>>>> 4833ae45a7d8d8b334dbbb04d235592bf0370a60
 }
 
 .focus-input100::before {
