--- a/templates/withfit.html
+++ b/templates/withfit.html
@@ -1,23 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="/static/css/style_g1.css">
+{% comment %} <link rel="stylesheet" href="/static/css/style_g1.css"> {% endcomment %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/style_g1.css' %}"/>
 <link rel="shortcut icon" href="{% static '/img/favicon2.png' %}">
 
 <script>
+    // main으로 이동
+    function go_main() {
+        history.back();
+        return false;
+    }
+
+    // 운동 선택으로 이동
+    function go_select() {
+        fetch('/withfit/').then(function(response) {
+            response.text().then(function(text) {
+                document.querySelector('body').innerHTML = text;
+            })
+        })
+    };
+
+    // bgm play
     let bgm = new Audio();
     bgm.src = "/static/upright-piano-arcade-instrumental-mix-1342.mp3";
     bgm.play();
 
     let count = 1;
 
-    function getval(value) {
-        let selected = value;
-        console.log(selected);
-    };
-
-    // 배경 음악 재생/정지
+    // bgm play, pause
     function play_pause() {
         if (count == 0) {
             count = 1;
@@ -31,209 +42,96 @@
         };
     };
 
-    // exercise.html -> people.html
+    // withfit.html -> people.html
     function select_exercise(exercise) {
         const selected_exercise = exercise.value;
+        let youtube;
+        let guide;
         console.log(selected_exercise);
+
         if (selected_exercise == "푸시업") {
             exercise_img = "push_up";
+            youtube = "";
+            // youtube = "https://youtu.be/_l3ySVKYVJ8";
+            guide = "양 손은 바닥에 어깨너비로 벌리고 팔을 뻗고 시작합니다. 가슴과 허벅지를 땅에 내립니다. 몸을 곧게 펴고 팔꿈치는 어깨보다 엉덩이에 가깝게 움직입니다.";
         } else if (selected_exercise == "사이드 런지") {
             exercise_img = "side_lunge";
+            youtube = "";
+            guide = "옆으로 런지를 한다.";
         } else if (selected_exercise == "스탠딩 니 업") {
             exercise_img = "standing_knee_up";
+            youtube = "";
+            // youtube = <iframe src="https://www.youtube.com/embed/WKEQ1ONTS8s?controls=0&amp;start=20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>;
+            guide = "똑바로 선 후 양 무릎을 번갈아가며 들어올린다.";
         } else {
             exercise_img = "step_forward_lunge";
+            youtube = "";
+            guide = "앞으로 런지를 한다.";
         };
         console.log(exercise_img);
+
+        if (youtube == "") {
+            youtube = `/static/img/fitness/${exercise_img}.gif`;
+        };
+        
         fetch('/player/').then(function(response) {
             response.text().then(function(text) {
                 document.querySelector('body').innerHTML = text;
-                document.getElementById('ex_img').src = "/static/img/fitness/" + exercise_img + ".gif";
+                document.getElementById('ex_img').src = youtube;
+                document.getElementById("explain").innerHTML = guide;
                 document.getElementById('ex_name').innerHTML = selected_exercise;
+                console.log('주소' + document.referrer);
             })
         })
     };
 
-    {% comment %} function select_p(p) {
-        let selected_p = p.value;
-        //console.log(selected_p);
-        return selected_p;
-    };
+    //function select_p(p) {
+    //    let selected_p = p.value;
+    //    //console.log(selected_p);
+    //    return selected_p;
+    //};
 
-    var np = selected_p();
-    console.log(np);
+    //var np = selected_p();
+    //console.log(np);
 
-    function game_play() {
-        fetch('/play/').then(function(response) {
-            response.text().then(function(text) {
-                document.querySelector('body').innerHTML = text;
-            })
-        })
-    }; {% endcomment %}
+    //function game_play() {
+    //    fetch('/play/').then(function(response) {
+    //        response.text().then(function(text) {
+    //            document.querySelector('body').innerHTML = text;
+    //        })
+    //    })
+    //};
 </script>
-
+<img id="back" src="/static/back.png" onclick="go_main()"></img>
 <img id="audiobtn" src="/static/on.png" onclick="play_pause()"></img>
-    <div class="screen">
-        <form method='POST'>
-            {% csrf_token %}
-            <div class="select_exercise">
-                <div class="exercise">
-                    <img src="/static/img/fitness/push_up.gif">
-                    {% comment %} <button type="submit" name="selected_e" value='푸시업' onclick="select_exercise(this.value)">푸시업</button> {% endcomment %}
-                    <input type="button" value="푸시업" onclick="select_exercise(this)"></input>
-                </div>
-                <div class="exercise">
-                    <img src="/static/img/fitness/side_lunge.gif">
-                    {% comment %} <button type="submit" name="selected_e" value='사이드 런지'>사이드 런지</button> {% endcomment %}
-                    <input type="button" value="사이드 런지" onclick="select_exercise(this)"></input>
-                </div>
-                <div class="exercise">
-                    <img src="/static/img/fitness/standing_knee_up.gif">
-                    {% comment %} <button type="submit" name="selected_e" value='스탠딩 니 업'>스탠딩 니 업</button> {% endcomment %}
-                    <input type="button" value="스탠딩 니 업" onclick="select_exercise(this)"></input>
-                </div>
-                <div class="exercise">
-                    <img src="/static/img/fitness/step_forward_lunge.gif">
-                    {% comment %} <button type="submit" name="selected_e" value='포워드 런지'>포워드 런지</button> {% endcomment %}
-                    <input type="button" value="포워드 런지" onclick="select_exercise(this)"></input>
-                </div>
+{% comment %} <iframe src="/static/silence.mp3" allow="autoplay" id="audio" style="display:none;"></iframe>
+<audio id="audio" autoplay><source src="/static/upright-piano-arcade-instrumental-mix-1342.mp3"></audio> {% endcomment %}
+<div class="screen">
+    <h3>운동 선택</h3><br><br><br>
+    <form method='POST'>
+        {% csrf_token %}
+        <div class="select_exercise">
+            <div class="exercise">
+                <img src="/static/img/fitness/push_up.gif">
+                {% comment %} <button type="submit" name="selected_e" value='푸시업' onclick="select_exercise(this.value)">푸시업</button> {% endcomment %}
+                <input type="button" value="푸시업" onclick="select_exercise(this)"></input>
             </div>
-        </form>
-    </div>
+            <div class="exercise">
+                <img src="/static/img/fitness/side_lunge.gif">
+                {% comment %} <button type="submit" name="selected_e" value='사이드 런지'>사이드 런지</button> {% endcomment %}
+                <input type="button" value="사이드 런지" onclick="select_exercise(this)"></input>
+            </div>
+            <div class="exercise">
+                <img src="/static/img/fitness/standing_knee_up.gif">
+                {% comment %} <button type="submit" name="selected_e" value='스탠딩 니 업'>스탠딩 니 업</button> {% endcomment %}
+                <input type="button" value="스탠딩 니 업" onclick="select_exercise(this)"></input>
+            </div>
+            <div class="exercise">
+                <img src="/static/img/fitness/step_forward_lunge.gif">
+                {% comment %} <button type="submit" name="selected_e" value='포워드 런지'>포워드 런지</button> {% endcomment %}
+                <input type="button" value="포워드 런지" onclick="select_exercise(this)"></input>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
-
-{% comment %} <!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>With Fitness</title>
-
-    <link rel="stylesheet" href="/static/css/style_g1.css">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/style_g1.css' %}"/>
-    <link rel="shortcut icon" href="{% static '/img/favicon2.png' %}"> {% endcomment %}
-
-    {% comment %} <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"> {% endcomment %}
-
-    {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> {% endcomment %}
-{% comment %} </head>
-<body>
-    <img id="audiobtn" src="/static/on.png" onclick="play_pause()"></img>
-    <div class="screen">
-        <form method='POST'>
-            {% csrf_token %}
-            <div class="select_exercise">
-                <div class="exercise">
-                    <img src="/static/img/fitness/push_up.gif">
-                    <input type="button" value="푸시업" onclick="select_exercise(this)"></input>
-                </div>
-                <div class="exercise">
-                    <img src="/static/img/fitness/side_lunge.gif">
-                    <input type="button" value="사이드 런지" onclick="select_exercise(this)"></input>
-                </div>
-                <div class="exercise">
-                    <img src="/static/img/fitness/standing_knee_up.gif">
-                    <input type="button" value="스탠딩 니 업" onclick="select_exercise(this)"></input>
-                </div>
-                <div class="exercise">
-                    <img src="/static/img/fitness/step_forward_lunge.gif">
-                    <input type="button" value="포워드 런지" onclick="select_exercise(this)"></input>
-                </div>
-            </div>
-        </form>
-    </div>
-</body>
-<script>
-    let bgm = new Audio();
-    bgm.src = "/static/upright-piano-arcade-instrumental-mix-1342.mp3";
-    bgm.play();
-
-    let count = 1;
-
-    function getval(value) {
-        let selected = value;
-        console.log(selected);
-    }; {% endcomment %}
-
-    // 배경 음악 재생/정지
-    {% comment %} function play_pause() {
-        if (count == 0) {
-            count = 1;
-            bgm.play();
-            document.getElementById('audiobtn').src = '/static/on.png';
-        }
-        else {
-            count = 0;
-            bgm.pause();
-            document.getElementById('audiobtn').src = '/static/off.png';
-        };
-    };
-
-    // exercise.html -> people.html
-    function select_exercise(exercise) {
-        const selected_exercise = exercise.value;
-        console.log(selected_exercise);
-        if (selected_exercise == "푸시업") {
-            exercise_img = "push_up";
-        } else if (selected_exercise == "사이드 런지") {
-            exercise_img = "side_lunge";
-        } else if (selected_exercise == "스탠딩 니 업") {
-            exercise_img = "standing_knee_up";
-        } else {
-            exercise_img = "step_forward_lunge";
-        };
-        console.log(exercise_img);
-        fetch('/player/').then(function(response) {
-            response.text().then(function(text) {
-                document.querySelector('body').innerHTML = text;
-                document.getElementById('ex_img').src = "/static/img/fitness/" + exercise_img + ".gif";
-                document.getElementById('ex_name').innerHTML = selected_exercise;
-            })
-        })
-    }; {% endcomment %}
-
-    {% comment %} $("p_btn").click(function() {
-        let selected_p = $(this).value();
-        console.log(selected_p);
-    }); {% endcomment %}
-
-    {% comment %} document.querySelector("p_btn").click(function() {
-        let selected_p = this.value;
-        console.log(selected_p);
-    }); {% endcomment %}
-
-    {% comment %} function get_p(p) {
-        let selected_p = p.value;
-        console.log(selected_p);
-    };
-
-    document.querySelector("p_btn")
-    .addEventListener("click", get_p(this)); {% endcomment %}
-
-    {% comment %} function select_p(p) {
-        const selected_p = p.value;
-        console.log(selected_p);
-        return selected_p;
-    }; {% endcomment %}
-
-    {% comment %} function get_team_name() {
-        let team_name = document.querySelector('team_name').value;
-        console.log(team_name);
-    };
-
-    function game_play() {
-        fetch('play/').then(function(response) {
-            response.text().then(function(text) {
-                document.querySelector('body').innerHTML = text;
-            })
-        })
-    };
-</script>
-</html> {% endcomment %}
-
