--- a/templates/withfit.html
+++ b/templates/withfit.html
@@ -102,6 +102,7 @@
     //    })
     //};
 </script>
+<section id="select">
 <img id="back" src="/static/back.png" onclick="go_main()"></img>
 <img id="audiobtn" src="/static/on.png" onclick="play_pause()"></img>
 {% comment %} <iframe src="/static/silence.mp3" allow="autoplay" id="audio" style="display:none;"></iframe>
@@ -134,4 +135,5 @@
         </div>
     </form>
 </div>
+</section>
 {% endblock %}
