--- a/static/css/style_g1.css
+++ b/static/css/style_g1.css
@@ -19,11 +19,13 @@ body {
 }
 
 #back {
-    position: relative;
+    /* position: relative;
     top: 19%;
-    left: 13%;
+    left: 13%; */
+    float: left;
+    margin-left: 2%;
     width: 30px;
-    z-index: 1000;
+    z-index: 2;
     cursor: pointer;
 }
 
@@ -32,22 +34,48 @@ h3 {
 }
 
 #audiobtn {
-    position: relative;
+    /* position: relative;
     top: 19%;
-    right: -82%;
+    right: -80%; */
+    float: right;
+    margin-right: 2%;
     width: 30px;
+    z-index: 2;
     cursor: pointer;
 }
+
+/* #left {
+    float: left;
+    margin-left: 5%;
+    width: 40%;
+    height: 70%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#right {
+    float: right;
+    margin-right: 5%;
+    width: 40%;
+    height: 70%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+} */
 
 .screen {
     text-align: center;
     position: absolute;
-    width: 74%;
+    width: 76%;
     height: 60%;
     top: 49%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* overflow: auto; */
+    overflow: auto;
     /* background-color: thistle; */
     padding: 6px;
 }
