--- a/templates/play.html
+++ b/templates/play.html
@@ -10,11 +10,12 @@
     // Damage Values
     let result_score = 0;
     let game_switch = 0; // 0 - 시작전 , 1 - 시작 , 2 - 종료
+    let sign_switch = 2; // 0 - Stand(준비상태) , 1 - Left or Right, 2 - 포즈 실행전
 
     const bgm = new Audio();
 
     let count = 1;
-    let time = 10; // 기준 시간
+    let time = 120; // 기준 시간
     
 
     bgm.src = "/static/inspiring-8-bit-563.mp3";
@@ -24,6 +25,7 @@
 </script>
 
 <div class='screen'>
+    <span class="msg-text">이것은 테스트메시지입니다.</span>
     <div id='timer'></div>
     <canvas id="canvas"></canvas>
     <img id="monster" scr="img/monster-jelly_0.gif">
