--- a/templates/play2P.html
+++ b/templates/play2P.html
@@ -4,7 +4,18 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/style_SD.css' %}"/>
 <script type="text/javascript" src="{% static 'js/loading.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/sideknee_model_player2.js' %}"></script>
-<script type="text/javascript">init();</script>
+<script type="text/javascript">
+    //  이미지
+    //  얼굴
+    let maskimg = new Image();
+    maskimg.src = "../static/img/items/ironman_sm.png"
+
+    // 손
+    let handimg = new Image();
+    handimg.src = "../static/img/items/ironman_Hand.png"
+
+    init();
+</script>
 
 <script>
     // Damage Values
