--- a/templates/fitness/result.html
+++ b/templates/fitness/result.html
@@ -2,15 +2,21 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style_Result.css' %}"/>
-<body>
-<div class='screen'>
-    <p>결과 화면</p>
-    <!-- 본인 스코어값 DB에서 불러오기 -->
-    <!-- 랭킹 DB 불러오기 -->
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <input type="button" value="CONTINUE" onclick = "location.href = '../withfit'"></input>
-    <input type="button" value="CLOSE"  onclick = "location.href = '../'"></input>
-</div>
 
-</body>
+<section id="result">
+    <h2>결과 화면</h2>
+
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+
+
+    <input type="button" value="CONTINUE" onclick = "location.href = '/select'"></input>
+    <input type="button" value="CLOSE"  onclick = "location.href = '/withfit'"></input>
+</section>
+    
 {% endblock %}
