--- a/templates/fitness/select.html
+++ b/templates/fitness/select.html
@@ -43,14 +43,12 @@
     // withfit.html -> people.html
     function select_exercise(exercise) {
         const selected_exercise = exercise.value;
-        let youtube;
+        let exercise_img;
         let guide;
         console.log(selected_exercise);
 
         if (selected_exercise == "푸시업") {
             exercise_img = "push_up";
-            youtube = "";
-            // youtube = "https://youtu.be/_l3ySVKYVJ8";
             guide = "양 손은 바닥에 어깨너비로 벌리고 팔을 뻗고 시작합니다. 가슴과 허벅지를 땅에 내립니다. 몸을 곧게 펴고 팔꿈치는 어깨보다 엉덩이에 가깝게 움직입니다.";
         } else if (selected_exercise == "사이드 런지") {
             exercise_img = "side_lunge";
@@ -58,7 +56,6 @@
             guide = "옆으로 런지를 한다.";
         } else if (selected_exercise == "스탠딩 니 업") {
             exercise_img = "standing_knee_up";
-            // youtube = <iframe src="https://www.youtube.com/embed/WKEQ1ONTS8s?controls=0&amp;start=20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>;
             guide = "똑바로 선 후 양 무릎을 번갈아가며 들어올린다.";
         } else {
             exercise_img = "step_forward_lunge";
@@ -66,15 +63,11 @@
             guide = "앞으로 런지를 한다.";
         };
         console.log(exercise_img);
-
-        if (youtube == "") {
-            youtube = `/static/img/fitness/fitness-git/${exercise_img}.gif`;
-        };
         
         fetch('/player/').then(function(response) {
             response.text().then(function(text) {
                 document.querySelector('body').innerHTML = text;
-                document.getElementById('ex_img').src = youtube;
+                document.getElementById('ex_img').src = `/static/img/fitness/fitness-git/${exercise_img}.gif`;
                 document.getElementById("explain").innerHTML = guide;
                 document.getElementById('ex_name').innerHTML = selected_exercise;
                 document.getElementById('exercise').value = selected_exercise;
