--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+@font-face {
+  font-family: 'shadow9';
+  src: url('/static/shadow9.TTF');
+}
+
 body {
   font-family: 'NeoDunggeunmo';
   color: #444444;
