--- a/static/css/style_g1.css
+++ b/static/css/style_g1.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
     font-family: 'shadow9';
     src: url('/static/shadow9.TTF');
-}
+} */
 
 html, body {
     width: 100%;
@@ -15,13 +15,10 @@ body {
     align-content: center;
     color: white;
     font-family: 'shadow9';
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #back {
-    /* position: relative;
-    top: 19%;
-    left: 13%; */
     float: left;
     margin-left: 2%;
     width: 30px;
@@ -34,38 +31,12 @@ h3 {
 }
 
 #audiobtn {
-    /* position: relative;
-    top: 19%;
-    right: -80%; */
     float: right;
     margin-right: 2%;
     width: 30px;
     z-index: 2;
     cursor: pointer;
 }
-
-/* #left {
-    float: left;
-    margin-left: 5%;
-    width: 40%;
-    height: 70%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#right {
-    float: right;
-    margin-right: 5%;
-    width: 40%;
-    height: 70%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-} */
 
 .screen {
     text-align: center;
@@ -135,6 +106,12 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 3px solid white;
+    border-radius: 20px;
+}
+
+#left img {
+    min-width: max-content;
 }
 
 #right {
@@ -147,10 +124,16 @@ h3 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    /* border: 3px solid white;
+    border-radius: 20px; */
 }
 
 #right div {
     margin-top: 30px;
+}
+
+.mobile div {
+    display: inline-block;
 }
 
 #explain {
@@ -168,7 +151,6 @@ h3 {
 
 label {
     cursor: pointer;
-    /* margin: 10px 10px; */
 }
 
 label:before {
@@ -206,27 +188,8 @@ p {
     color: #17ec91;
 }
 
-/* .team {
-    text-align: center;
-    font-size: 50px;
-}
-
-input[type="text"] {
-    width: 200px;
-    height: 40px;
-    font-family: 'shadow9';
-    font-size: 50%;
-    text-align: center;
-} */
-
 /* play.html */
 #timer {
     font-family: 'Orbitron', sans-serif;
     text-align: center;
-}
-
-#loading_image {
-    width: 1000px;
-    height: 1000px;
-    z-index: 10000;
 }
