--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,11 @@
     Sorry, your browser does not support HTML5 video.
   </video>
   <a href="/withfit"><div id="coin"></div></a>
+  <!-- {% if request.session.email %}
+    <a href="/withfit"><div id="coin"></div></a>
+  {% else %}
+    <a href="/signin"><div id="coin"></div></a>
+  {% endif %} -->
 </section>
 <!-- End Hero -->
 
