--- a/templates/people.html
+++ b/templates/people.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
-{% comment %} <link rel="stylesheet" href="/static/css/style_g1.css"> {% endcomment %}
+{% block content %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/style_g1.css' %}"/>
 <link rel="shortcut icon" href="{% static '/img/favicon2.png' %}">
 
@@ -12,46 +11,35 @@
 
     let count = 1;
 </script>
-<img id="back" src="/static/back.png" onclick="go_select()"></img>
-<img id="audiobtn" src="/static/on.png" onclick="play_pause()"></img>
+
 <form method='POST' action="{% url 'fitness:play' %}">
     {% csrf_token %}
-    {% comment %} <div class="wrap"> {% endcomment %}
     <div class="screen">
-        {% comment %} {% if exercise_name %} {% endcomment %}
-            {% comment %} <h3 id="ex_name">{{exercise_name}}</h3> {% endcomment %}
-        <h3 id="ex_name"></h3><br><br><br>
-        {% comment %} {% endif %} {% endcomment %}
-        <div id="left">
-            {% comment %} <img src="{% get_static_prefix %}{{exercise_img}}.gif" width='200px' height='200px'></img> {% endcomment %}
-            <img id="ex_img" src="" width='200px' height='200px'></img>
-        </div>
-        <div id="right">
-            <div id="explain"></div>
-            <div class='radio'>
-                <div>
-                    <input type="radio" id="rad1" name="selected_p" value='1' required>
-                    {% comment %} <input type="radio" class="p_btn" id="rad1" name="selected_p" value='1'> {% endcomment %}
-                    <label for="rad1"></label>
-                    <p>1인</p>
-                </div>
-                <div>
-                    <input type="radio" id="rad2" name="selected_p" value='2'>
-                    {% comment %} <input type="radio" class="p_btn" id="rad2" name="selected_p" value='2'> {% endcomment %}
-                    <label for="rad2"></label>
-                    <p>2인</p>
-                </div>
+        <div>
+            <img id="back" src="/static/back.png" onclick="go_select()"></img>
+            <h3 id="ex_name" style="display:inline;"></h3>
+            <img id="audiobtn" src="/static/on.png" onclick="play_pause()"></img>
+        </div><br><br>
+            <div id="left">
+                <img id="ex_img" src="" width='200px' height='200px'></img>
             </div>
-            <button type='submit' id="playbtn">PLAY</button>
-        </div>
-        <br>
-        {% comment %} <div class='team'>
-            팀명<br>
-            <input type='text' class="team_name" placeholder='입력해주세요' name='team_name' required></input>
-        </div> {% endcomment %}
-        {% comment %} <br><br> {% endcomment %}
-        {% comment %} <input type="button" value="play"></input> {% endcomment %}
-        <input type='hidden' name='exercise' value='{{exercise_name}}'></input>
+            <div id="right">
+                <div id="explain"></div>
+                <div class='radio'>
+                    <div>
+                        <input type="radio" id="rad1" name="selected_p" value='1' required>
+                        <label for="rad1"></label>
+                        <p>1인</p>
+                    </div>
+                    <div>
+                        <input type="radio" id="rad2" name="selected_p" value='2'>
+                        <label for="rad2"></label>
+                        <p>2인</p>
+                    </div>
+                </div>
+                <button type='submit' id="playbtn">PLAY</button>
+            </div>
+        <input type='hidden' id="exercise" name='exercise'></input>
     </div>
 </form>
 {% endblock %}
